improvements of atom group search

--- a/src/metadb/FormulaSearch.Extensions/FormulaSearch.Extensions.vbproj
+++ b/src/metadb/FormulaSearch.Extensions/FormulaSearch.Extensions.vbproj
@@ -144,6 +144,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AtomGroups\Alkyl.vb" />
+    <Compile Include="AtomGroups\AtomGroupHandler.vb" />
+    <Compile Include="AtomGroups\Ketones.vb" />
     <Compile Include="PeakAnnotation.vb" />
     <Compile Include="PrecursorIonComposition.vb" />
     <Compile Include="PrecursorIonSearch.vb" />
