--- a/src/metadb/FormulaSearch.Extensions/FormulaSearch.Extensions.vbproj
+++ b/src/metadb/FormulaSearch.Extensions/FormulaSearch.Extensions.vbproj
@@ -146,6 +146,7 @@
     <Compile Include="AtomGroups\Alkyl.vb" />
     <Compile Include="AtomGroups\AtomGroupHandler.vb" />
     <Compile Include="AtomGroups\Amines.vb" />
+    <Compile Include="AtomGroups\Alkenyl.vb" />
     <Compile Include="AtomGroups\Ketones.vb" />
     <Compile Include="PeakAnnotation.vb" />
     <Compile Include="PrecursorIonComposition.vb" />
