improvements of the raw file model

--- a/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -469,7 +469,7 @@
     <Compile Include="GCMS\CDFReader\Vendors\shimadzuGCMS.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\WiffRaw.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\ScanOfTPA.vb" />
-    <Compile Include="MRM\RawFile.vb" />
+    <Compile Include="RawFile.vb" />
     <Compile Include="MRM\Data\MRMPeakTable.vb" />
     <Compile Include="MRM\Data\Extensions.vb" />
     <Compile Include="MRM\Data\TargetQuantification.vb" />
