--- a/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -441,6 +441,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="etc\UnitExtensions.vb" />
     <Compile Include="GCMS\CDFReader\agilentGCMSMeta.vb" />
     <Compile Include="GCMS\mzMLReader\TimeScanMatrix.vb" />
     <Compile Include="GCMS\mzMLReader\mzMLReader.vb" />
@@ -452,7 +453,7 @@
     <Compile Include="MRM\QuantitativeAnalysis\RTAlignment.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\MRMArguments.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\QuantificationWorker.vb" />
-    <Compile Include="QuantitativeAnalysis\ContentUnits.vb" />
+    <Compile Include="etc\ContentUnits.vb" />
     <Compile Include="GCMS\ChromatographyPeaktable.vb" />
     <Compile Include="GCMS\QuantifyAnalysis\ReferenceLibrary.vb" />
     <Compile Include="GCMS\QuantifyAnalysis\SIMMode.vb" />
@@ -474,15 +475,15 @@
     <Compile Include="MRM\Data\Extensions.vb" />
     <Compile Include="MRM\Data\TargetQuantification.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\MRMPeak.vb" />
-    <Compile Include="QuantitativeAnalysis\IonTPA.vb" />
-    <Compile Include="QuantitativeAnalysis\PeakAreaMethods.vb" />
-    <Compile Include="QuantitativeAnalysis\StandardCurve.vb" />
-    <Compile Include="QuantitativeAnalysis\ContentResult.vb" />
-    <Compile Include="QuantitativeAnalysis\NamespaceDoc.vb" />
+    <Compile Include="LinearQuantitative\IonTPA.vb" />
+    <Compile Include="LinearQuantitative\PeakAreaMethods.vb" />
+    <Compile Include="LinearQuantitative\StandardCurve.vb" />
+    <Compile Include="LinearQuantitative\ContentResult.vb" />
+    <Compile Include="LinearQuantitative\NamespaceDoc.vb" />
     <Compile Include="TPAExtensions.vb" />
-    <Compile Include="QuantitativeAnalysis\PeakArea.vb" />
-    <Compile Include="QuantitativeAnalysis\Standards.vb" />
-    <Compile Include="QuantitativeAnalysis\IS.vb" />
+    <Compile Include="LinearQuantitative\PeakArea.vb" />
+    <Compile Include="LinearQuantitative\Standards.vb" />
+    <Compile Include="LinearQuantitative\IS.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\Samples.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\StandardCurveWorker.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
