--- a/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -475,15 +475,15 @@
     <Compile Include="MRM\Data\Extensions.vb" />
     <Compile Include="MRM\Data\TargetQuantification.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\MRMPeak.vb" />
-    <Compile Include="LinearQuantitative\IonTPA.vb" />
+    <Compile Include="LinearQuantitative\Models\IonTPA.vb" />
     <Compile Include="LinearQuantitative\PeakAreaMethods.vb" />
-    <Compile Include="LinearQuantitative\StandardCurve.vb" />
-    <Compile Include="LinearQuantitative\ContentResult.vb" />
+    <Compile Include="LinearQuantitative\Models\StandardCurve.vb" />
+    <Compile Include="LinearQuantitative\Models\ContentResult.vb" />
     <Compile Include="LinearQuantitative\NamespaceDoc.vb" />
     <Compile Include="TPAExtensions.vb" />
     <Compile Include="LinearQuantitative\PeakArea.vb" />
-    <Compile Include="LinearQuantitative\Standards.vb" />
-    <Compile Include="LinearQuantitative\IS.vb" />
+    <Compile Include="LinearQuantitative\Models\Standards.vb" />
+    <Compile Include="LinearQuantitative\Models\IS.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\Samples.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\StandardCurveWorker.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
