--- a/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -447,7 +447,7 @@
     <Compile Include="GCMS\mzMLReader\mzMLReader.vb" />
     <Compile Include="LinearQuantitative\Linear\InternalStandardMethod.vb" />
     <Compile Include="LinearQuantitative\Linear\WorkCurve.vb" />
-    <Compile Include="LinearQuantitative\Models\ROIPeak.vb" />
+    <Compile Include="LinearQuantitative\Linear\Points\ROIPeak.vb" />
     <Compile Include="MRM\IsomerismIonPairs.vb" />
     <Compile Include="MRM\Data\NamespaceDoc.vb" />
     <Compile Include="MRM\Data\MRMStandards.vb" />
@@ -475,7 +475,7 @@
     <Compile Include="RawFile.vb" />
     <Compile Include="MRM\Data\MRMPeakTable.vb" />
     <Compile Include="MRM\Data\Extensions.vb" />
-    <Compile Include="LinearQuantitative\Models\TargetQuantification.vb" />
+    <Compile Include="LinearQuantitative\Linear\Points\TargetQuantification.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\MRMPeak.vb" />
     <Compile Include="LinearQuantitative\Models\IonTPA.vb" />
     <Compile Include="LinearQuantitative\PeakAreaMethods.vb" />
