--- a/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -441,7 +441,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="etc\UnitExtensions.vb" />
+    <Compile Include="Contents\ContentTable.vb" />
+    <Compile Include="Contents\UnitExtensions.vb" />
     <Compile Include="GCMS\CDFReader\agilentGCMSMeta.vb" />
     <Compile Include="GCMS\mzMLReader\TimeScanMatrix.vb" />
     <Compile Include="GCMS\mzMLReader\mzMLReader.vb" />
@@ -458,7 +459,7 @@
     <Compile Include="MRM\QuantitativeAnalysis\RTAlignment.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\MRMArguments.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\QuantificationWorker.vb" />
-    <Compile Include="etc\ContentUnits.vb" />
+    <Compile Include="Contents\ContentUnits.vb" />
     <Compile Include="GCMS\ChromatographyPeaktable.vb" />
     <Compile Include="GCMS\QuantifyAnalysis\ReferenceLibrary.vb" />
     <Compile Include="GCMS\QuantifyAnalysis\SIMMode.vb" />
