file names to contents

--- a/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -445,6 +445,7 @@
     <Compile Include="Contents\ContentTable.vb" />
     <Compile Include="Contents\UnitExtensions.vb" />
     <Compile Include="GCMS\CDFReader\agilentGCMSMeta.vb" />
+    <Compile Include="GCMS\Extensions.vb" />
     <Compile Include="GCMS\mzMLReader\TimeScanMatrix.vb" />
     <Compile Include="GCMS\mzMLReader\mzMLReader.vb" />
     <Compile Include="GCMS\QuantifyIon.vb" />
