--- a/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -456,6 +456,7 @@
     <Compile Include="LinearQuantitative\Linear\Points\ROIPeak.vb" />
     <Compile Include="LinearQuantitative\Models\IonPeakTableRow.vb" />
     <Compile Include="LinearQuantitative\Models\QuantifyScan.vb" />
+    <Compile Include="MRM\Data\IonChromatogram.vb" />
     <Compile Include="MRM\MRMIonExtract.vb" />
     <Compile Include="MRM\IsomerismIonPairs.vb" />
     <Compile Include="MRM\Data\NamespaceDoc.vb" />
