--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -308,6 +308,12 @@
     <Compile Include="pages\contextMenu\ToggleSlider.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="pages\dockWindow\base\ToolWindow.Designer.vb">
+      <DependentUpon>ToolWindow.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\base\ToolWindow.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="pages\dockWindow\DemoItem.vb" />
     <Compile Include="pages\dockWindow\documents\frmMRMLibrary.Designer.vb">
       <DependentUpon>frmMRMLibrary.vb</DependentUpon>
@@ -476,9 +482,6 @@
     <Compile Include="pages\dockWindow\frmDockDocument.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="pages\dockWindow\base\ToolWindow.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="pages\pageStart\NewsFeedDisplay.Designer.vb">
       <DependentUpon>NewsFeedDisplay.vb</DependentUpon>
     </Compile>
@@ -625,6 +628,9 @@
     <EmbeddedResource Include="pages\contextMenu\ToggleSlider.resx">
       <DependentUpon>ToggleSlider.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="pages\dockWindow\base\ToolWindow.resx">
+      <DependentUpon>ToolWindow.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\documents\frmFeatureSearch.resx">
       <DependentUpon>frmFeatureSearch.vb</DependentUpon>
     </EmbeddedResource>
@@ -691,7 +697,6 @@
     <EmbeddedResource Include="pages\dockWindow\frmStartPage.resx">
       <DependentUpon>frmStartPage.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="pages\dockWindow\base\ToolWindow.resx" />
     <EmbeddedResource Include="pages\dockWindow\tools\TaskListWindow.resx">
       <DependentUpon>TaskListWindow.vb</DependentUpon>
     </EmbeddedResource>
